Merge with the branch GroupsRefactoring. Group framework refactoring: - added dynamic dispatch (a form of load balancing) - added reduction and unicast (components) - added regression tests - added examples for dynamic dispatch + Minor corrections to the components framework
git-svn-id: svn+ssh://scm.gforge.inria.fr/svn/proactive/trunk@9163 28e8926c-6b08-0410-baaa-805c5e19b8d6