@@ -36,11 +36,14 @@ import java.lang.reflect.TypeVariable;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.Iterator;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.ListIterator;
 import java.util.Map;
+import java.util.Queue;
 import java.util.Set;
 import java.util.Vector;
+import java.util.concurrent.CountDownLatch;
 
 import org.apache.log4j.Logger;
 import org.objectweb.proactive.Body;
@@ -48,14 +51,19 @@ import org.objectweb.proactive.annotation.PublicAPI;
 import org.objectweb.proactive.api.PAActiveObject;
 import org.objectweb.proactive.api.PAFuture;
 import org.objectweb.proactive.api.PAGroup;
+import org.objectweb.proactive.core.ProActiveRuntimeException;
 import org.objectweb.proactive.core.UniqueID;
 import org.objectweb.proactive.core.body.AbstractBody;
 import org.objectweb.proactive.core.body.LocalBodyStore;
 import org.objectweb.proactive.core.body.SendingQueue;
+import org.objectweb.proactive.core.body.future.FutureProxy;
 import org.objectweb.proactive.core.body.proxy.AbstractProxy;
 import org.objectweb.proactive.core.body.proxy.SendingQueueProxy;
+import org.objectweb.proactive.core.component.exceptions.ReductionException;
+import org.objectweb.proactive.core.component.type.annotations.multicast.Reduce;
+import org.objectweb.proactive.core.component.type.annotations.multicast.ReduceBehavior;
+import org.objectweb.proactive.core.component.type.annotations.multicast.ReduceMode;
 import org.objectweb.proactive.core.group.spmd.MethodCallSetSPMDGroup;
-import org.objectweb.proactive.core.group.threadpool.ThreadPool;
 import org.objectweb.proactive.core.mop.ClassNotReifiableException;
 import org.objectweb.proactive.core.mop.ConstructionOfReifiedObjectFailedException;
 import org.objectweb.proactive.core.mop.ConstructorCall;
@@ -73,11 +81,16 @@ import org.objectweb.proactive.core.util.profiling.TimerWarehouse;
 @PublicAPI
 public class ProxyForGroup<E> extends AbstractProxy implements Proxy, Group<E>, java.io.Serializable {
 
+    static int i = 0;
+
+    /**
+     * The name of the Class : all members of the group are "className"
+     * assignable
+     */
+    protected String className;
+
     /** The logger for the Class */
     protected static Logger logger = ProActiveLogger.getLogger(Loggers.GROUPS);
-
-    /** The name of the Class : all members of the group are "className" assignable */
-    protected String className;
 
     /**
      * The list of member : it contains exclusively, StubObjects connected to Proxies, or Java
@@ -88,28 +101,42 @@ public class ProxyForGroup<E> extends AbstractProxy implements Proxy, Group<E>, 
     /** The map : to name members of the group */
     protected Map<String, Integer> elementNames;
 
-    /** Unique identifier for body (avoid infinite loop in some hierarchical groups) */
-
+    /**
+     * Unique identifier for body (avoid infinite loop in some hierarchical
+     * groups)
+     */
     // NOT FULLY IMPLEMENTED !!!
     transient protected UniqueID proxyForGroupID;
 
     /**
-     * Number of awaited methodcall on the group's member. The Semantic is : we wait all call are
-     * done before continuing
+     * Number of awaited methodcall on the group's member. The Semantic is : we
+     * wait all call are done before continuing
      */
     protected int waited = 0;
 
-    /** Flag to determine the semantic of communication (broadcast or dispatching) */
+    /**
+     * Flag to deternime the semantic of communication (broadcast or
+     * dispatching)
+     */
     protected boolean dispatching = false;
 
-    /** Flag to determine the semantic of communication (unique serialization of parameters or not) */
+    protected DispatchMode dispatchMode = DispatchMode.UNSPECIFIED;
+
+    /**
+     * Flag to deternime the semantic of communication (unique serialization of
+     * parameters or not)
+     */
     protected boolean uniqueSerialization = false;
 
     /** The stub of the typed group */
-    private StubObject stub;
+    protected StubObject stub;
 
     /** A pool of thread to serve the request */
-    transient protected ThreadPool threadpool;
+    // transient protected ExecutorService threadpool;
+    transient protected Dispatcher dispatcher;
+    int bufferSize = 1; // size of buffer of requests on server side when
+    // dynamically dispatching requests
+    transient protected TaskFactory taskFactory;
 
     /**
      * whether to automatically remove failing elements from the group instead of throwing an
@@ -126,8 +153,10 @@ public class ProxyForGroup<E> extends AbstractProxy implements Proxy, Group<E>, 
     public ProxyForGroup() throws ConstructionOfReifiedObjectFailedException {
         this.memberList = new Vector<E>();
         this.proxyForGroupID = new UniqueID();
-        this.threadpool = new ThreadPool();
+        // this.threadpool = Executors.newCachedThreadPool();
         this.elementNames = new HashMap<String, Integer>();
+        dispatcher = new Dispatcher(this, false, bufferSize);
+        taskFactory = TaskFactoryFactory.getTaskFactory(this);
     }
 
     public ProxyForGroup(ConstructorCall c, Object[] p) throws ConstructionOfReifiedObjectFailedException {
@@ -150,6 +179,12 @@ public class ProxyForGroup<E> extends AbstractProxy implements Proxy, Group<E>, 
         this.dispatching = false;
     }
 
+    protected void setBalancingMode(DispatchMode balancingMode, int bufferSize) {
+        //		dispatcher.setDynamic(true);
+        this.dispatchMode = balancingMode;
+        this.bufferSize = bufferSize;
+    }
+
     /**
      * Allows the Group to make an unique serialization of parameters.
      */
@@ -158,10 +193,15 @@ public class ProxyForGroup<E> extends AbstractProxy implements Proxy, Group<E>, 
     }
 
     /**
-     * Removes the ability of the Group to make an unique serialization of parameters..
+     * Removes the ability of the Group to make an unique serialization of
+     * parameters..
      */
     public void setUniqueSerializationOff() {
         this.uniqueSerialization = false;
+    }
+
+    public boolean isUniqueSerializationOn() {
+        return uniqueSerialization;
     }
 
     /**
@@ -173,9 +213,9 @@ public class ProxyForGroup<E> extends AbstractProxy implements Proxy, Group<E>, 
         return this.dispatching;
     }
 
-    private boolean isDispatchingCall(MethodCall mc) {
+    public boolean isDispatchingCall(MethodCall mc) {
         for (int i = 0; i < mc.getNumberOfParameter(); i++)
-            if (PAGroup.isScatterGroupOn(mc.getParameter(i))) {
+            if (ProActiveGroup.isScatterGroupOn(mc.getParameter(i))) {
                 return true;
             }
         return false;
@@ -207,19 +247,21 @@ public class ProxyForGroup<E> extends AbstractProxy implements Proxy, Group<E>, 
     /* ------------------------ THE PROXY'S METHOD ------------------------ */
 
     /**
-     * The proxy's method : implements the semantic of communication. This method invokes the method
-     * call <code>mc</code> on each members of the Group.
+     * The proxy's method : implements the semantic of communication. This
+     * method invokes the method call <code>mc</code> on each members of the
+     * Group.
      * 
      * @param mc
      *            the MethodCall to apply on each member of the Group.
-     * @return the result of the call : <b> the result of a method call on a typed group is a typed
-     *         group</b>.
+     * @return the result of the call : <b> the result of a method call on a
+     *         typed group is a typed group</b>.
      * @throws InvocationTargetException
-     *             if a problem occurs when invoking the method on the members of the Group
+     *             if a problem occurs when invoking the method on the members
+     *             of the Group
      */
     public synchronized Object reify(MethodCall mc) throws InvocationTargetException {
-        // System.out.println("A method is called : \"" + mc.getName() + "\" on " +
-        // this.memberList.size() + " membres.");
+        // System.out.println("A method is called : \"" + mc.getName() + "\" on
+        // " + this.memberList.size() + " membres.");
         if (Profiling.TIMERS_COMPILED) {
             TimerWarehouse
                     .startXAndDisable(
@@ -247,15 +289,20 @@ public class ProxyForGroup<E> extends AbstractProxy implements Proxy, Group<E>, 
         // there may be some reorganization of the parameters
         // redistributeParameters(mc);
 
-        /* result will be a stub on a proxy for group representing the group of results */
+        /*
+         * result will be a stub on a proxy for group representing the group of results
+         */
         Object result = null;
 
         /*
          * check if the threadpool is big enough to make the call (is there is not enough thread,
          * create new ones)
          */
-        this.threadpool.checkNumberOfThreads(this.memberList.size());
-
+        // this.threadpool.checkNumberOfThreads(this.memberList.size());
+        // dispatcher.checkPoolSize(memberList.size());
+        // if (doneSignal == null) {
+        // doneSignal = new CountDownLatch(memberList.size());
+        // }
         //
         // -- BEGIN ForgetOnSend Control --
         //
@@ -290,22 +337,30 @@ public class ProxyForGroup<E> extends AbstractProxy implements Proxy, Group<E>, 
             exceptionList = new ExceptionListException();
             this.oneWayCallOnGroup(mc, exceptionList);
         }
-        /* Special case : the method returns void but is Synchronous because it throws Exception */
+        /*
+         * Special case : the method returns void but is Synchronous because it throws Exception
+         */
         else if (mc.getReifiedMethod().getReturnType() == Void.TYPE) {
             exceptionList = new ExceptionListException();
             this.oneWayCallOnGroup(mc, exceptionList);
         }
-        /* if the call is asynchronous the group of result will be a group a future */
+        /*
+         * if the call is asynchronous the group of result will be a group a future
+         */
         else { // with group in general case : SYNC == ASYNC !!!!
             result = this.asynchronousCallOnGroup(mc);
         }
 
         /*
-         * A barrier of synchronization to be sure that all calls are done before continuing the
+         * A barrier of synchronisation to ensure that all calls are done before continuing the
          * execution
          */
-        this.threadpool.complete();
-
+        // try {
+        // doneSignal.await();
+        // } catch (InterruptedException e) {
+        // throw new InvocationTargetException(e, "Group invocation failed due
+        // to a synchronization issue");
+        // }
         if (Profiling.TIMERS_COMPILED) {
             TimerWarehouse.enableAndStopX(PAActiveObject.getBodyOnThis().getID(), ((mc.isOneWayCall() || (mc
                     .getReifiedMethod().getReturnType() == Void.TYPE)) ? TimerWarehouse.GROUP_ONE_WAY_CALL
@@ -334,17 +389,19 @@ public class ProxyForGroup<E> extends AbstractProxy implements Proxy, Group<E>, 
         this.autoPurge = autoPurge;
     }
 
-    /** Explicit destructor : Interrupts the threads in the threadpool */
-    @Override
-    public void finalize() {
-        this.threadpool.clean();
-    }
+    // /** Explicit destructor : Interrupts the threads in the threadpool */
+    // @Override
+    // public void finalize() {
+    // // leave this task to the GC
+    // dispatcher = null;
+    // // this.threadpool.shutdownNow();
+    // }
 
     /* ------------ FOR ASYNCHRONOUS CALL ------------ */
 
     /**
-     * Creates and initializes (and returns) the group of result, then launch threads for
-     * asynchronous call of each member.
+     * Creates and initializes (and returns) the group of result, then launch
+     * threads for asynchronous call of each member.
      * 
      * @param mc
      *            the MethodCall to be applied on each member of the Group.
@@ -377,37 +434,34 @@ public class ProxyForGroup<E> extends AbstractProxy implements Proxy, Group<E>, 
                 " : cannot create group of results");
         }
 
-        int size = this.memberList.size();
+        // data partitioning
+        List<MethodCall> methodsToDispatch = taskFactory.generateMethodCalls(mc);
+        int nbExpectedCalls = methodsToDispatch.size();
+        CountDownLatch doneSignal = new CountDownLatch(nbExpectedCalls);
+        Queue<AbstractProcessForGroup> tasksToDispatch = taskFactory.generateTasks(mc, methodsToDispatch,
+                result, null, doneSignal, this);
+        // dispatch
+        dispatcher.dispatchTasks(tasksToDispatch, doneSignal, mc.getReifiedMethod().getAnnotation(
+                Dispatch.class));
 
-        // Init the lists of result with null value to permit the "set(index)" operation
-        Vector<E> memberListOfResultGroup = ((ProxyForGroup<E>) ((StubObject) result).getProxy()).memberList;
-        for (int i = 0; i < size; i++) {
-            memberListOfResultGroup.add(null);
-        }
-
-        // Creating Threads
-        if (isDispatchingCall(mc) == false) {
-            if (uniqueSerialization) {
-                mc.transformEffectiveArgumentsIntoByteArray();
-            }
-            for (int index = 0; index < this.memberList.size(); index++)
-                this.threadpool.addAJob(new ProcessForAsyncCall(this, this.memberList,
-                    memberListOfResultGroup, index, mc, body));
-        } else { // isDispatchingCall == true
-            // Object[] individualEffectiveArguments = distributeParameters(mc);
-            for (int index = 0; index < memberList.size(); index++) {
-                Object[] individualEffectiveArguments = new Object[mc.getNumberOfParameter()];
-                for (int i = 0; i < mc.getNumberOfParameter(); i++)
-                    if (PAGroup.isScatterGroupOn(mc.getParameter(i))) {
-                        individualEffectiveArguments[i] = PAGroup.get(mc.getParameter(i), index %
-                            PAGroup.size(mc.getParameter(i)));
-                    } else {
-                        individualEffectiveArguments[i] = mc.getParameter(i);
-                    }
-                this.threadpool.addAJob(new ProcessForAsyncCall(this, this.memberList,
-                    memberListOfResultGroup, index,
-                    new MethodCall(mc.getReifiedMethod(), mc.getGenericTypesMapping(),
-                        individualEffectiveArguments, mc.getExceptionContext()), body));
+        // TODO rely on API or method call rather than annotation?
+        Reduce reduceAnnotation = mc.getReifiedMethod().getAnnotation(Reduce.class);
+        if (reduceAnnotation != null) {
+            try {
+                if (!ReduceMode.CUSTOM.equals(reduceAnnotation.reductionMode())) {
+                    result = reduceAnnotation.reductionMode().reduce(PAGroup.getGroup(result));
+                    //					result = reduceAnnotation.reductionMode().reduce((List<?>)result);
+                } else {
+                    ReduceBehavior reduction = (ReduceBehavior) reduceAnnotation.customReductionMode()
+                            .newInstance();
+                    result = reduction.reduce(PAGroup.getGroup(result));
+                }
+            } catch (ReductionException e) {
+                throw new InvocationTargetException(e, "cannot reduce results from group invocation");
+            } catch (InstantiationException e) {
+                throw new InvocationTargetException(e, "cannot reduce results from group invocation");
+            } catch (IllegalAccessException e) {
+                throw new InvocationTargetException(e, "cannot reduce results from group invocation");
             }
         }
 
@@ -416,17 +470,57 @@ public class ProxyForGroup<E> extends AbstractProxy implements Proxy, Group<E>, 
     }
 
     /**
-     * Add the results (Future) into the typed group result at the correct position.
+     * Add the results (Future) into the typed group result at the correct
+     * position.
      * 
      * @param memberListOfResultGroup
      *            the list of the typed group result.
      * @param result
      *            the result of a call on member of a Group.
-     * @param index
+     * @param resultIndex
      *            the rank of the result.
+     * @param groupIndex
+     *            TODO
      */
-    protected void addToListOfResult(Vector<Object> memberListOfResultGroup, Object result, int index) {
-        memberListOfResultGroup.set(index, result);
+    public static void addToListOfResult(Vector<Object> memberListOfResultGroup, Object result,
+            int resultIndex, DispatchMonitor dispatchMonitor, int groupIndex) {
+        if (memberListOfResultGroup.get(resultIndex) != null) {
+            throw new ProActiveRuntimeException(
+                "Problem while updating result group: there is already something at index " + resultIndex);
+        }
+        if (result == null) { // could not execute method on a null object
+            System.out.println("############ result is null");
+            memberListOfResultGroup.set(resultIndex, result);
+            return;
+        }
+        if (dispatchMonitor != null) {
+            // in other words, dispatch is dynamic
+            // future
+            if (result instanceof StubObject) {
+                // prevents future updates while processing
+                // (that would result in no dispatcher when future is updated)
+                synchronized (((StubObject) result).getProxy()) {
+
+                    if (PAFuture.isAwaited(result)) {
+                        // System.out.println("result as a future");
+                        ((FutureProxy) ((StubObject) result).getProxy()).setDispatchMonitor(dispatchMonitor);
+                    } else {
+                        // System.out.println("result as a value");
+                        dispatchMonitor.updatedResult(groupIndex);
+                    }
+                }
+            } else if (result instanceof ExceptionInGroup) {
+                if (!(((ExceptionInGroup) result).getObject() instanceof StubObject)) {
+                    throw new ProActiveRuntimeException("mmm. not good!");
+                }
+                dispatchMonitor.updatedResult(((StubObject) ((ExceptionInGroup) result).getObject())
+                        .getProxy());
+            } else {
+                dispatchMonitor.updatedResult(groupIndex);
+                // (standard object)
+            }
+        }
+        memberListOfResultGroup.set(resultIndex, result);
     }
 
     /* -------------------- FOR ONEWAY CALL ---------------------- */
@@ -441,45 +535,27 @@ public class ProxyForGroup<E> extends AbstractProxy implements Proxy, Group<E>, 
             throws InvocationTargetException {
         Body body = PAActiveObject.getBodyOnThis();
 
-        // Creating Threads
-        if (isDispatchingCall(mc) == false) {
-            if (uniqueSerialization) {
-                mc.transformEffectiveArgumentsIntoByteArray();
-            }
-            for (int index = 0; index < this.memberList.size(); index++) {
-                this.threadpool.addAJob(new ProcessForOneWayCall(this, this.memberList, index, mc, body,
-                    exceptionList));
-            }
-        } else { // isDispatchingCall == true
-            // Object[] individualEffectiveArguments = distributeParameters(mc);
-            for (int index = 0; index < memberList.size(); index++) {
-                Object[] individualEffectiveArguments = new Object[mc.getNumberOfParameter()];
-                for (int i = 0; i < mc.getNumberOfParameter(); i++)
-                    if (PAGroup.isScatterGroupOn(mc.getParameter(i))) {
-                        individualEffectiveArguments[i] = PAGroup.get(mc.getParameter(i), index %
-                            PAGroup.size(mc.getParameter(i)));
-                    } else {
-                        individualEffectiveArguments[i] = mc.getParameter(i);
-                    }
-                this.threadpool.addAJob(new ProcessForOneWayCall(this, this.memberList, index,
-                    new MethodCall(mc.getReifiedMethod(), mc.getGenericTypesMapping(),
-                        individualEffectiveArguments, mc.getExceptionContext()), body, exceptionList));
-            }
-        }
-
+        List<MethodCall> methodsToDispatch = taskFactory.generateMethodCalls(mc);
+        int nbExpectedCalls = methodsToDispatch.size();
+        CountDownLatch doneSignal = new CountDownLatch(nbExpectedCalls);
+        Queue<AbstractProcessForGroup> tasksToDispatch = taskFactory.generateTasks(mc, methodsToDispatch,
+                null, exceptionList, doneSignal, this);
+        dispatcher.dispatchTasks(tasksToDispatch, doneSignal, mc.getReifiedMethod().getAnnotation(
+                Dispatch.class));
         // LocalBodyStore.getInstance().setCurrentThreadBody(body);
     }
 
     /* ------------------- java.util.List methods------------------ */
 
     /**
-     * If o is a reified object and if it is "assignableFrom" the class of the group, add it into
-     * the group<br> - if o is a group merge it into the group<br> - if o is not a reified object
-     * nor a group : do nothing<br>
+     * If o is a reified object and if it is "assignableFrom" the class of the
+     * group, add it into the group<br> - if o is a group merge it into the
+     * group<br> - if o is not a reified object nor a group : do nothing<br>
      * 
      * @param o -
      *            element whose presence in this group is to be ensured
-     * @return <code>true</code> if this collection changed as a result of the call
+     * @return <code>true</code> if this collection changed as a result of the
+     *         call
      */
     @SuppressWarnings("unchecked")
     public boolean add(E o) {
@@ -496,14 +572,12 @@ public class ProxyForGroup<E> extends AbstractProxy implements Proxy, Group<E>, 
                 //                // COMPONENTS
                 //
                 //                /* if o is a reference on a component interface */
-                //                else if (o instanceof ProActiveInterface) {
+                //                else if (o instanceof PAFutureInterface) {
                 //                    return this.memberList.add(o);
                 //                } /* if o is a Group */else 
-                if (o instanceof org.objectweb.proactive.core.group.ProxyForGroup) {
-
+                if (o instanceof ProxyForGroup) {
                     /* like an addMerge call */
-                    return this.memberList
-                            .addAll(((org.objectweb.proactive.core.group.ProxyForGroup<E>) o).memberList);
+                    return this.memberList.addAll(((ProxyForGroup<E>) o).memberList);
                 } /* o is a standard Java object */else {
                     return this.memberList.add(o);
                 }
@@ -526,7 +600,8 @@ public class ProxyForGroup<E> extends AbstractProxy implements Proxy, Group<E>, 
      * 
      * @param c -
      *            the elements to be inserted into this Group.
-     * @return <code>true</code> if this collection changed as a result of the call.
+     * @return <code>true</code> if this collection changed as a result of the
+     *         call.
      */
     public boolean addAll(Collection<? extends E> c) {
         boolean modified = false;
@@ -538,30 +613,32 @@ public class ProxyForGroup<E> extends AbstractProxy implements Proxy, Group<E>, 
     }
 
     /**
-     * Removes all of the elements from this group. This group will be empty after this method
-     * returns.
+     * Removes all of the elements from this group. This group will be empty
+     * after this method returns.
      */
     public void clear() {
         this.memberList.clear();
     }
 
     /**
-     * This method returns true if and only if this group contains at least one element e such that
-     * <code>o.equals(e)</code>
+     * This method returns true if and only if this group contains at least one
+     * element e such that <code>o.equals(e)</code>
      * 
-     * @return <code>true</code> if this collection contains the specified element.
+     * @return <code>true</code> if this collection contains the specified
+     *         element.
      */
     public boolean contains(Object o) {
         return this.memberList.contains(o);
     }
 
     /**
-     * Checks if this Group contains all of the elements in the specified collection.
+     * Checks if this Group contains all of the elements in the specified
+     * collection.
      * 
      * @param c -
      *            the collection to be checked for containment in this Group.
-     * @return <code>true</code> if this Group contains all of the elements in the specified
-     *         collection
+     * @return <code>true</code> if this Group contains all of the elements in
+     *         the specified collection
      */
     public boolean containsAll(Collection<?> c) {
         boolean contained;
@@ -576,23 +653,25 @@ public class ProxyForGroup<E> extends AbstractProxy implements Proxy, Group<E>, 
     }
 
     /**
-     * Compares the specified object with this group for equality. Returns <code>true</code> if
-     * and only if the specified Object <code>o</code> is also a <code>Group</code>, both
-     * <code>Group</code>s have the same size, and all corresponding pairs of elements in the two
+     * Compares the specified object with this group for equality. Returns
+     * <code>true</code> if and only if the specified Object <code>o</code>
+     * is also a <code>Group</code>, both <code>Group</code>s have the
+     * same size, and all corresponding pairs of elements in the two
      * <code>Group</code>s are equal. (Two elements e1 and e2 are equal if (<code>e1==null ? e2==null : e1.equals(e2)</code>).
-     * In other words, two <code>Group</code>s are defined to be equal if they contain the same
-     * elements in the same order.
+     * In other words, two <code>Group</code>s are defined to be equal if
+     * they contain the same elements in the same order.
      * 
      * @param o
      *            the Object for which we test the equality.
-     * @return <code>true</code> if <code>o</code> is the same Group as <code>this</code>.
+     * @return <code>true</code> if <code>o</code> is the same Group as
+     *         <code>this</code>.
      */
     @Override
     public boolean equals(Object o) {
-        ProxyForGroup<?> p = PAGroup.findProxyForGroup(o);
+        ProxyForGroup p = PAGroup.findProxyForGroup(o);
         if (p != null) {
             // comparing with another group
-            return this.memberList.equals((p).memberList);
+            return this.memberList.equals(((ProxyForGroup) p).memberList);
         } else {
             return false;
         }
@@ -730,13 +809,17 @@ public class ProxyForGroup<E> extends AbstractProxy implements Proxy, Group<E>, 
                 ((MOP.forName(this.className)).isAssignableFrom(oGroup.getClass()))) {
 
                 /* check oGroup is an object representing a group */
-                if (((StubObject) oGroup).getProxy() instanceof org.objectweb.proactive.core.group.ProxyForGroup) {
+                if (((StubObject) oGroup).getProxy() instanceof ProxyForGroup) {
                     memberList.addAll(((ProxyForGroup) ((StubObject) oGroup).getProxy()).memberList);
-                } /* if oGroup is a Standard Active Object (but not a group), just add it */else {
+                }
+                /*
+                 * if oGroup is a Standard Active Object (but not a group), just add it
+                 */
+                else {
                     this.add((E) oGroup);
                 }
-            } /* if oGroup is a Group */else if (oGroup instanceof org.objectweb.proactive.core.group.ProxyForGroup) {
-                memberList.addAll(((org.objectweb.proactive.core.group.ProxyForGroup) oGroup).memberList);
+            } /* if oGroup is a Group */else if (oGroup instanceof ProxyForGroup) {
+                memberList.addAll(((ProxyForGroup) oGroup).memberList);
             }
         } catch (java.lang.ClassNotFoundException e) {
             if (logger.isInfoEnabled()) {
@@ -757,7 +840,9 @@ public class ProxyForGroup<E> extends AbstractProxy implements Proxy, Group<E>, 
     }
 
     /**
-     * Returns a list iterator of the members in this Group (in proper sequence).
+     * Returns a list iterator of the members in this Group (in proper
+     * sequence).
+     * 
      * 
      * @return a list iterator of the members in this Group.
      */
@@ -779,7 +864,7 @@ public class ProxyForGroup<E> extends AbstractProxy implements Proxy, Group<E>, 
             String key = it.next();
             Integer value = (Integer) elementNames.get(key);
             if (value.intValue() > index) {
-                elementNames.put(key, new Integer(value.intValue() - 1));
+                elementNames.put(key, Integer.valueOf(value.intValue() - 1));
             }
         }
         return this.memberList.remove(index);
@@ -878,7 +963,8 @@ public class ProxyForGroup<E> extends AbstractProxy implements Proxy, Group<E>, 
             e.printStackTrace();
         }
 
-        // the group are incompatible (i.e. they have not members of the the same class)
+        // the group are incompatible (i.e. they have not members of the the
+        // same class)
         return null;
     }
 
@@ -912,7 +998,8 @@ public class ProxyForGroup<E> extends AbstractProxy implements Proxy, Group<E>, 
             e.printStackTrace();
         }
 
-        // the group are incompatible (i.e. they have not members of the the same class)
+        // the group are incompatible (i.e. they have not members of the the
+        // same class)
         return null;
     }
 
@@ -945,7 +1032,8 @@ public class ProxyForGroup<E> extends AbstractProxy implements Proxy, Group<E>, 
             e.printStackTrace();
         }
 
-        // the group are incompatible (i.e. they have not members of the the same class)
+        // the group are incompatible (i.e. they have not members of the the
+        // same class)
         return null;
     }
 
@@ -988,7 +1076,8 @@ public class ProxyForGroup<E> extends AbstractProxy implements Proxy, Group<E>, 
             e.printStackTrace();
         }
 
-        // the group are incompatible (i.e. they have not members of the the same class)
+        // the group are incompatible (i.e. they have not members of the the
+        // same class)
         return null;
     }
 
@@ -1038,11 +1127,14 @@ public class ProxyForGroup<E> extends AbstractProxy implements Proxy, Group<E>, 
         } catch (InvocationTargetException e) {
             logger.info("Unable to set the SPMD group");
             e.printStackTrace();
+        } catch (Exception e) {
+            e.printStackTrace();
         }
     }
 
     /**
-     * To debug, display the size of the Group and all its members with there position
+     * To debug, display the size of the Group and all its members with there
+     * position
      */
     public void display() {
         logger.info("Number of member : " + memberList.size());
@@ -1161,8 +1253,7 @@ public class ProxyForGroup<E> extends AbstractProxy implements Proxy, Group<E>, 
 
     /**
      * Returns an ExceptionListException containing all the throwables (exceptions and errors)
-     * occured when this group was built
-     * 
+     * occurred when this group was built.
      * @return an ExceptionListException
      */
     public ExceptionListException getExceptionList() {
@@ -1183,7 +1274,7 @@ public class ProxyForGroup<E> extends AbstractProxy implements Proxy, Group<E>, 
     public void purgeExceptionAndNull() {
         Iterator<E> it = this.memberList.iterator();
         while (it.hasNext()) {
-            E element = it.next();
+            E element = (E) it.next();
             if ((element instanceof Throwable) || (element == null)) {
                 it.remove();
             }
@@ -1197,22 +1288,12 @@ public class ProxyForGroup<E> extends AbstractProxy implements Proxy, Group<E>, 
      *            the new ratio
      */
     public void setRatioMemberToThread(int i) {
-        this.threadpool.ratio(i);
-    }
-
-    /**
-     * Modifies the number of additional threads to serve members
-     * 
-     * @param i -
-     *            the new number
-     */
-    public void setAdditionalThread(int i) {
-        this.threadpool.thread(i);
+        // this.threadpool.ratio(i);
+        // TODO_M replace this method
     }
 
     /*
-     * ---------------------- METHOD FOR SYNCHRONOUS CREATION OF A TYPED GROUP
-     * ----------------------
+     * ---------- METHOD FOR SYNCHRONOUS CREATION OF A TYPED GROUP ----------
      */
 
     /**
@@ -1231,11 +1312,19 @@ public class ProxyForGroup<E> extends AbstractProxy implements Proxy, Group<E>, 
         for (int i = 0; i < params.length; i++) {
             this.memberList.add(null);
         }
+        CountDownLatch doneSignal = new CountDownLatch(params.length);
+        Queue<AbstractProcessForGroup> tasksToDispatch = new LinkedList<AbstractProcessForGroup>();
         for (int i = 0; i < params.length; i++) {
-            this.threadpool.addAJob(new ProcessForGroupCreation(this, className, genericParameters,
-                params[i], nodeList[i % nodeList.length], i));
+            tasksToDispatch.add(new ProcessForGroupCreation(this, className, genericParameters, params[i],
+                nodeList[i % nodeList.length], i, doneSignal));
         }
-        this.threadpool.complete();
+        dispatcher.dispatchTasks(tasksToDispatch, doneSignal, null);
+        try {
+            doneSignal.await();
+        } catch (InterruptedException e) {
+            // TODO Auto-generated catch block
+            e.printStackTrace();
+        }
     }
 
     /**
@@ -1254,11 +1343,19 @@ public class ProxyForGroup<E> extends AbstractProxy implements Proxy, Group<E>, 
         for (int i = 0; i < nodeList.length; i++) {
             this.memberList.add(null);
         }
+        CountDownLatch doneSignal = new CountDownLatch(nodeList.length);
+        Queue<AbstractProcessForGroup> tasksToDispatch = new LinkedList<AbstractProcessForGroup>();
         for (int i = 0; i < nodeList.length; i++) {
-            this.threadpool.addAJob(new ProcessForGroupCreation(this, className, genericParameters, params,
-                nodeList[i], i));
+            tasksToDispatch.add(new ProcessForGroupCreation(this, className, genericParameters, params,
+                nodeList[i], i, doneSignal));
         }
-        this.threadpool.complete();
+        dispatcher.dispatchTasks(tasksToDispatch, doneSignal, null);
+        try {
+            doneSignal.await();
+        } catch (InterruptedException e) {
+            // TODO Auto-generated catch block
+            e.printStackTrace();
+        }
     }
 
     /*
@@ -1303,7 +1400,9 @@ public class ProxyForGroup<E> extends AbstractProxy implements Proxy, Group<E>, 
         return memberList.subList(fromIndex, toIndex);
     }
 
-    /* ------------------------ PRIVATE METHODS FOR SERIALIZATION --------------------- */
+    /*
+     * ---------- PRIVATE METHODS FOR SERIALIZATION ----------
+     */
     private void writeObject(java.io.ObjectOutputStream out) throws java.io.IOException {
         // this.threadpool.finalize();
         out.defaultWriteObject();
@@ -1312,7 +1411,8 @@ public class ProxyForGroup<E> extends AbstractProxy implements Proxy, Group<E>, 
     private void readObject(java.io.ObjectInputStream in) throws java.io.IOException, ClassNotFoundException {
         in.defaultReadObject();
         this.proxyForGroupID = new UniqueID();
-        this.threadpool = new ThreadPool();
+        dispatcher = new Dispatcher(this, false, bufferSize);
+        taskFactory = TaskFactoryFactory.getTaskFactory(this);
     }
 
     // Map class style method
@@ -1403,7 +1503,7 @@ public class ProxyForGroup<E> extends AbstractProxy implements Proxy, Group<E>, 
         if (elementNames.containsKey(key)) {
             removeNamedElement(key);
         }
-        this.elementNames.put(key, new Integer(this.size()));
+        this.elementNames.put(key, Integer.valueOf(this.size()));
         this.add(value);
     }
 
@@ -1414,7 +1514,7 @@ public class ProxyForGroup<E> extends AbstractProxy implements Proxy, Group<E>, 
      * supports element removal, which removes the corresponding mapping from the Group, via the
      * Iterator.remove, Set.remove, removeAll retainAll, and clear operations. It does not support
      * the add or addAll operations.
-     * 
+     *
      * @return a set view of the keys contained in this Group.
      */
     public Set<String> keySet() {
@@ -1460,6 +1560,10 @@ public class ProxyForGroup<E> extends AbstractProxy implements Proxy, Group<E>, 
      */
     public void setClassName(String className) {
         this.className = className;
+    }
+
+    public DispatchMode balancing() {
+        return dispatchMode;
     }
 
     public void setStub(StubObject stub) {
